# noise-recognition

./: AudioFrequencyDetectorV1-0.ino  CMakeLists.txt  README.md  noise-recognition.cpp  noise-recognition.h
examples/: AudioFrequencyDetectorV1-0.ino  noise-rec-test.ino
noise-recognition/: library.properties  noise-recognition.cpp  noise-recognition.h
